NIFI-15918 Stabilized flaky system tests around Processor lifecycle (#11223)
- Defensive copy in LifecycleState.getFutures() to prevent ConcurrentModificationException.
- Ensure StandardProcessorNode.stop() decrements active threads and completes the
  stop action even if the stop task throws.
- Promote silent processor start abort paths to INFO logs to aid diagnosis.
- Null-safe shutdown in KubernetesConfigMapStateProvider when initialization was skipped.
- NiFiClientUtil.runProcessorOnce waits for validation completion and fails fast on
  INVALID; system tests updated to use it where appropriate.
- ContentClaimTruncationIT: keep one small FlowFile queued so its resource claim is
  pinned during replay, preventing archive-cleanup-induced truncation flakes.

Signed-off-by: David Handermann <exceptionfactory@apache.org>